...
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <ListView
        android:id="@+id/listCourses"
        android:layout_width="wrap_content"
        android:layout_height="446dp"
        android:layout_gravity="top"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="120dp"
        android:layout_weight="1"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/buttonDeletePassword"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="245dp"
        android:layout_height="53dp"
        android:background="@color/pink2"
        android:textColor="@color/purple1"
        android:text="Delete Password"
...
